PLUGINWIZARD-77 : AdminJSPBean's generator bug : the bug is fixed
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@64616 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_jspbean_admin_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_jspbean_admin_alternative.html
@@ -73,7 +73,7 @@ public class ${business_class.businessClass}JspBean extends ${feature_name}JspBe
     // Parameters
 <#list business_class.attributes as attribute>
     <#if attribute.isPrimary >
-    private static final String PARAMETER_${attribute.attributeName?upper_case}="${attribute.paramName}";
+    private static final String PARAMETER_ID_${business_class.businessClass?upper_case}="${attribute.paramName}";
     </#if>
 </#list>
 
