PLUGINWIZARD-77 : AdminJSPBean's generator bug : the bug is fixed
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@64624 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_xpage_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_xpage_alternative.html
@@ -64,7 +64,12 @@ public class ${business_class.businessClass}XPage extends MVCApplication
     private static final String JSP_PAGE_PORTAL = "jsp/site/Portal.jsp";
     
     // Parameters
-    private static final String PARAMETER_ID_${business_class.businessClass?upper_case}="id_${business_class.businessClass?lower_case}";
+    <#list business_class.attributes as attribute>
+    <#if attribute.isPrimary >
+    private static final String PARAMETER_ID_${business_class.businessClass?upper_case}="${attribute.paramName}";
+    </#if>
+    </#list>
+    
     private static final String PARAM_ACTION = "action";
     private static final String PARAM_PAGE = "page";
     
