PLUGINWIZARD-78 : Initial work for REST Generation : The plugin generate REST architecture for all the business classes checked in the rest step.
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@64949 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_portlets.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_portlets.html
@@ -71,7 +71,7 @@
                     <i class="glyphicon glyphicon-chevron-left"></i>
                     #i18n{pluginwizard.pluginwizard_manage_portlets.buttonBack}
                 </button>
-                <button type="submit" name="view_recapitulate" class="btn btn-primary">
+                <button type="submit" name="view_manageRest" class="btn btn-primary">
                     #i18n{pluginwizard.pluginwizard_manage_portlets.buttonNext}
                     <i class="glyphicon glyphicon-chevron-right"></i>
                 </button>
