--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_xml_pom_file_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_xml_pom_file_alternative.html
@@ -26,9 +26,17 @@
         <dependency>
             <groupId>fr.paris.lutece</groupId>
             <artifactId>lutece-core</artifactId>
-            <version>[4.1.0,)</version>
+            <version>[4.4.0,)</version>
             <type>lutece-core</type>
         </dependency>
+        <#if plugin.getRest().getIdBusinessClasses()?? && plugin.getRest().getIdBusinessClasses()?size &gt; 0 >
+        <dependency>
+            <groupId>fr.paris.lutece.plugins</groupId>
+            <artifactId>plugin-rest</artifactId>
+            <version>[2.1.0,)</version>
+            <type>lutece-plugin</type>
+        </dependency>
+        </#if>
     </dependencies>
 
     <properties>
