--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_xml_spring_context_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_xml_spring_context_alternative.html
@@ -5,6 +5,18 @@
        xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-3.0.xsd" >
 
 <#list plugin.businessClasses as business_class>
+<#if business_class?? >
+<#if plugin.getRest().getIdBusinessClasses() ??>
+<#list plugin.getRest().getIdBusinessClasses() as id_business_class>
+<#if id_business_class == business_class.getId() >
+    <bean id="${plugin.pluginName}.${business_class.businessClass?uncap_first}Rest"  class="fr.paris.lutece.plugins.${plugin.pluginName}.web.rs.${business_class.businessClass?cap_first}Rest" />
+</#if>
+</#list>
+</#if>
+</#if>
+</#list>
+
+<#list plugin.businessClasses as business_class>
 <#if business_class?? > 
     <bean id="${plugin.pluginName}.${business_class.businessClass?uncap_first}DAO"  class="fr.paris.lutece.plugins.${plugin.pluginName}.business.${business_class.businessClass?cap_first}DAO" />  
 </#if>    
