--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/sidebar.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/sidebar.html
@@ -6,6 +6,7 @@
     <li class="btn btn-sm btn-block <#if step=="administration"> btn-primary <#else>btn-default</#if> disabled" ><h5>#i18n{pluginwizard.pluginwizard_create_application.labelFeaturesStep}</h5></li>
     <li class="btn btn-sm btn-block <#if step=="xpage"> btn-primary <#else>btn-default</#if> disabled" ><h5>#i18n{pluginwizard.pluginwizard_create_application.labelXPageStep}</h5></li>
     <li class="btn btn-sm btn-block <#if step=="portlet"> btn-primary <#else>btn-default</#if> disabled" ><h5>#i18n{pluginwizard.pluginwizard_create_application.labelPortletsStep}</h5></li>
+    <li class="btn btn-sm btn-block <#if step=="rest"> btn-primary <#else>btn-default</#if> disabled" ><h5>#i18n{pluginwizard.pluginwizard_create_application.labelRestStep}</h5></li>
     <li class="btn btn-sm btn-block <#if step=="generate"> btn-primary <#else>btn-default</#if> disabled" ><h5>#i18n{pluginwizard.pluginwizard_create_application.labelGenerateStep}</h5></li>       
 </ul>
 </#macro>
