--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_rest_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_rest_alternative.html
@@ -38,13 +38,17 @@ import fr.paris.lutece.plugins.${plugin_model.pluginName}.business.${business_cl
 import fr.paris.lutece.plugins.rest.service.RestConstants;
 import fr.paris.lutece.plugins.rest.util.json.JSONUtil;
 import fr.paris.lutece.plugins.rest.util.xml.XMLUtil;
+import fr.paris.lutece.portal.service.util.AppLogService;
 import java.io.IOException;
 
 import net.sf.json.JSONObject;
 
 import java.util.Collection;
+import javax.ws.rs.DELETE;
+import javax.ws.rs.FormParam;
 import javax.ws.rs.GET;
 import javax.ws.rs.HeaderParam;
+import javax.ws.rs.POST;
 import javax.ws.rs.Path;
 import javax.ws.rs.PathParam;
 import javax.ws.rs.QueryParam;
@@ -169,7 +173,7 @@ public class ${business_class.businessClass?cap_first}Rest
         }
         catch ( Exception e )
         {
-            sbXML.append( XMLUtil.formatError( "{business_class.businessClass?cap_first} not found", 1 ) );
+            sbXML.append( XMLUtil.formatError( "${business_class.businessClass?cap_first} not found", 1 ) );
         }
 
         return sbXML.toString(  );
@@ -197,10 +201,67 @@ public class ${business_class.businessClass?cap_first}Rest
         }
         catch ( Exception e )
         {
-            strJson = JSONUtil.formatError( "{business_class.businessClass?cap_first} not found", 1 );
+            strJson = JSONUtil.formatError( "${business_class.businessClass?cap_first} not found", 1 );
         }
 
         return strJson;
+    }
+    
+    @DELETE
+    @Path( "{" + Constants.ID_PATH + "}" )
+    public Response delete${business_class.businessClass?cap_first}( @PathParam( Constants.ID_PATH ) String strId, @HeaderParam(HttpHeaders.ACCEPT) String accept, @QueryParam( Constants.FORMAT_QUERY ) String format ) throws IOException
+    {
+        try
+        {
+            int nId = Integer.parseInt( strId );
+            
+            if ( ${business_class.businessClass?cap_first}Home.findByPrimaryKey( nId ) != null )
+            {
+                ${business_class.businessClass?cap_first}Home.remove( nId );
+            }
+        }
+        catch ( NumberFormatException e )
+        {
+            AppLogService.error( "Invalid ${business_class.businessClass?lower_case} number" );
+        }
+        return get${business_class.businessClass?cap_first}s(accept, format);
+    }
+    
+    @POST
+    public Response create${business_class.businessClass?cap_first}(
+    <#list business_class.attributes as attribute>
+    @FormParam( "${attribute.paramName?lower_case}" ) String ${attribute.paramName?lower_case}, 
+    </#list>
+    @HeaderParam(HttpHeaders.ACCEPT) String accept, @QueryParam( Constants.FORMAT_QUERY ) String format) throws IOException
+    {
+        if( id != null )
+        {
+            int nId = Integer.parseInt( id );
+
+            ${business_class.businessClass?cap_first} ${business_class.businessClass?lower_case} = ${business_class.businessClass?cap_first}Home.findByPrimaryKey( nId );
+
+            if ( ${business_class.businessClass?lower_case} != null )
+            {
+                <#list business_class.attributes as attribute>
+                <#if !attribute.isPrimary >
+                ${business_class.businessClass?lower_case}.set${attribute.name?cap_first}( ${attribute.paramName?lower_case} );
+                </#if>
+                </#list>
+                ${business_class.businessClass?cap_first}Home.update( ${business_class.businessClass?lower_case} );
+            }
+        }
+        else
+        {
+            ${business_class.businessClass?cap_first} ${business_class.businessClass?lower_case} = new ${business_class.businessClass?cap_first}( );
+            
+            <#list business_class.attributes as attribute>
+            <#if !attribute.isPrimary >
+            ${business_class.businessClass?lower_case}.set${attribute.name?cap_first}( ${attribute.paramName?lower_case} );
+            </#if>
+            </#list>
+            ${business_class.businessClass?cap_first}Home.create( ${business_class.businessClass?lower_case} );
+        }
+        return get${business_class.businessClass?cap_first}s(accept, format);
     }
     
     private void add${business_class.businessClass?cap_first}Xml( StringBuilder sbXML, ${business_class.businessClass?cap_first} ${business_class.businessClass?lower_case} )
