--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_xml_plugin_file.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_xml_plugin_file.html
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <plug-in>
     <name>${plugin.pluginName}</name>
     <class>${plugin.pluginClass}</class>
@@ -14,8 +14,13 @@
     <copyright>${plugin.pluginCopyright}</copyright>
     <db-pool-required>${plugin.pluginDbPoolRequired}</db-pool-required>
     
-    <!-- Admin features parameters -->
+    <core-version-dependency>
+        <min-core-version>4.1.0</min-core-version>
+        <max-core-version/>	
+    </core-version-dependency>
+
     <#if plugin.features??>
+    <!-- Admin features parameters -->
     <admin-features>
     <#list plugin.features as feature >
         <admin-feature>
@@ -29,8 +34,9 @@
       </#list>
     </admin-features>    
   </#if>
-  	<!-- XPages parameters -->
+
     <#if plugin.applications??>
+    <!-- XPages parameters -->
     <applications>
     <#list plugin.applications as application>
     <#if application.idBusinessClasses?? && application.idBusinessClasses?size&gt;0 >
@@ -53,8 +59,9 @@
     </#list>
     </applications>
     </#if>
-	<!-- Portlet parameters -->
+
     <#if plugin.portlets??>
+    <!-- Portlet parameters -->
     <portlets>
     <#list plugin.portlets as portlet>
      <portlet>
