PLUGINWIZARD-84 : For XPage generation applicationClass and applicationName are inverted
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@65913 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_xpage_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_xpage_alternative.html
@@ -246,8 +246,8 @@ import javax.servlet.http.HttpServletRequest;
  * This class provides a simple implementation of an XPage
  */
  
-@Controller( xpageName = "${plugin_application.applicationClass}" , pageTitleProperty = "${plugin_model.pluginName}.pageTitle" , pagePathProperty = "${plugin_model.pluginName}.pagePathLabel" )
-public class ${plugin_application.applicationName} extends MVCApplication
+@Controller( xpageName = "${plugin_application.applicationName}" , pageTitleProperty = "${plugin_model.pluginName}.pageTitle" , pagePathProperty = "${plugin_model.pluginName}.pagePathLabel" )
+public class ${plugin_application.applicationClass} extends MVCApplication
 {
     private static final String TEMPLATE_XPAGE = "/skin/plugins/${plugin_model.pluginName}/${plugin_application.applicationName}.html";
     private static final String VIEW_HOME = "home";
