--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_xpage_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_xpage_alternative.html
@@ -52,7 +52,7 @@ import javax.servlet.http.HttpServletRequest;
  * This class provides the user interface to manage ${business_class.businessClass} xpages ( manage, create, modify, remove )
  */
  
-@Controller( xpageName = "Manage${business_class.businessClass}s" , pageTitleProperty = "${plugin_model.pluginName}.pageTitle" , pagePathProperty = "${plugin_model.pluginName}.pagePathLabel" )
+@Controller( xpageName = "${business_class.businessClass?lower_case}" , pageTitleI18nKey = "${plugin_model.pluginName}.xpage.${business_class.businessClass?lower_case}.pageTitle" , pagePathI18nKey = "${plugin_model.pluginName}.xpage.${business_class.businessClass?lower_case}.pagePathLabel" )
 public class ${business_class.businessClass}XPage extends MVCApplication
 {
     // Templates
@@ -246,7 +246,7 @@ import javax.servlet.http.HttpServletRequest;
  * This class provides a simple implementation of an XPage
  */
  
-@Controller( xpageName = "${plugin_application.applicationName}" , pageTitleProperty = "${plugin_model.pluginName}.pageTitle" , pagePathProperty = "${plugin_model.pluginName}.pagePathLabel" )
+@Controller( xpageName = "${plugin_application.applicationName}" , pageTitleI18nKey = "${plugin_model.pluginName}.xpage.${plugin_application.applicationName}.pageTitle" , pagePathI18nKey = "${plugin_model.pluginName}.xpage.${plugin_application.applicationName}.pagePathLabel" )
 public class ${plugin_application.applicationClass} extends MVCApplication
 {
     private static final String TEMPLATE_XPAGE = "/skin/plugins/${plugin_model.pluginName}/${plugin_application.applicationName}.html";
