--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/classic/gt_xpage_classic.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/classic/gt_xpage_classic.html
@@ -50,7 +50,7 @@ import javax.servlet.http.HttpServletRequest;
  * This class provides the user interface to manage ${business_class.businessClass} xpages ( manage, create, modify, remove )
  */
  
-@Controller( xpageName = "Manage${business_class.businessClass}s" , pageTitleProperty = "${plugin_model.pluginName}.pageTitle" , pagePathProperty = "${plugin_model.pluginName}.pagePathLabel" )
+@Controller( xpageName = "${business_class.businessClass?lower_case}" , pageTitleI18nKey = "${plugin_model.pluginName}.xpage.${business_class.businessClass?lower_case}.pageTitle" , pagePathI18nKey = "${plugin_model.pluginName}.xpage.${business_class.businessClass?lower_case}.pagePathLabel" )
 public class ${business_class.businessClass}XPage extends MVCApplication
 {
     // Templates
