PLUGINWIZARD-82 : Bad code generated fixed for Create/Modify Object in JSPBean
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@65917 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_jspbean_admin_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_jspbean_admin_alternative.html
@@ -228,7 +228,7 @@ public class ${business_class.businessClass}JspBean extends ${feature_name}JspBe
     {
         int nId = Integer.parseInt( request.getParameter( PARAMETER_ID_${business_class.businessClass?upper_case} ) );
 
-        if ( _${business_class.businessClass?lower_case} == null || ( !_${business_class.businessClass?lower_case}.getKey().equals( strKey )))
+        if ( _${business_class.businessClass?lower_case} == null || ( _${business_class.businessClass?lower_case}.get${business_class.primaryKeyName}(  ) != nId ))
         {
             _${business_class.businessClass?lower_case} = ${business_class.businessClass}Home.findByPrimaryKey( nId );
         }
