--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_html_admin_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_html_admin_alternative.html
@@ -21,7 +21,7 @@
             <div class="control-group">
                 <label class="control-label" for="${attribute.paramName}" >${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}${i18n_close} * :</label>
                 <div class="controls">
-                    <input type="text" id="${attribute.paramName}" name="${attribute.paramName}" value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name}!''${bra_close}" <#if attribute.maxLength &gt; 0> maxlength="${attribute.maxLength}"</#if> tabindex="${attribute_index}" />
+                    <input type="text" id="${attribute.paramName}" name="${attribute.paramName}" value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}!''${bra_close}" <#if attribute.maxLength &gt; 0> maxlength="${attribute.maxLength}"</#if> tabindex="${attribute_index}" />
                     <span class="help-block">${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}.help${i18n_close}</span>
                 </div>
             </div>
