PLUGINWIZARD-84 : For XPage generation applicationClass and applicationName are inverted
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@66063 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_xml_plugin_file.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_xml_plugin_file.html
@@ -44,7 +44,7 @@
         <#list plugin.businessClasses as businessClass>
         <#if businessClass.id = idBusinessClass>
         <application>
-            <application-id>${business_class.businessClass?lower_case}</application-id>
+            <application-id>${businessClass.businessClass?lower_case}</application-id>
             <application-class>fr.paris.lutece.plugins.${plugin.pluginName}.web.${businessClass.businessClassCapsFirst}XPage</application-class>
         </application>
         </#if>
